force-app/main/default/objects/Borrow_Detail__c/Borrow_Detail__c.object-meta.xml
<CustomObject>
    <description>It is used to store Borrow Details and it behave as a junction object</description>
    <label>Borrow Detail</label>
    <nameField>
        <displayFormat>BOR-{0000}</displayFormat>
        <label>Borrow Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Borrow Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>