force-app/main/default/objects/Borrow_Detail__c/fields/Book__c.field-meta.xml
<CustomField>
    <fullName>Book__c</fullName>
    <description>It is used to get Book Details</description>
    <label>Book</label>
    <referenceTo>Book__c</referenceTo>
    <relationshipLabel>Borrow Details</relationshipLabel>
    <relationshipName>Borrow_Details</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>