force-app/main/default/objects/Borrow_Detail__c/fields/Borrow_Date__c.field-meta.xml
<CustomField>
    <fullName>Borrow_Date__c</fullName>
    <description>It is used to store when member bought the book</description>
    <label>Borrow Date</label>
    <type>Date</type>
</CustomField>