force-app/main/default/objects/Borrow_Detail__c/fields/Borrow_Duration__c.field-meta.xml
<CustomField>
    <fullName>Borrow_Duration__c</fullName>
    <description>It is used to store the Borrow Duration</description>
    <formula>IF( Return_Date__c &gt;  Borrow_Date__c , (Return_Date__c  -  Borrow_Date__c), 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Borrow Duration</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>