force-app/main/default/objects/Borrow_Detail__c/fields/Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Due_Date__c</fullName>
    <description>It is used to store when the customer need to handover the book to book shop.</description>
    <label>Due Date</label>
    <type>Date</type>
</CustomField>