force-app/main/default/objects/Borrow_Detail__c/fields/Fine_Per_Day__c.field-meta.xml
<CustomField>
    <fullName>Fine_Per_Day__c</fullName>
    <description>It is used to store Fine Per Day</description>
    <label>Fine Per Day</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>