force-app/main/default/objects/Borrow_Detail__c/fields/Member_Ship__c.field-meta.xml
<CustomField>
    <fullName>Member_Ship__c</fullName>
    <description>It is used to get Member Ship details</description>
    <label>Member Ship</label>
    <referenceTo>Member_Ship__c</referenceTo>
    <relationshipLabel>Borrow Details</relationshipLabel>
    <relationshipName>Borrow_Details</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>