force-app/main/default/objects/Borrow_Detail__c/fields/Overdue_Days__c.field-meta.xml
<CustomField>
    <fullName>Overdue_Days__c</fullName>
    <description>It is used to calculate the Overdue Days</description>
    <formula>IF( Return_Date__c &gt;  Due_Date__c ,  ( Return_Date__c - Due_Date__c ) , 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Overdue Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>