force-app/main/default/objects/Borrow_Detail__c/fields/Return_Date__c.field-meta.xml
<CustomField>
    <fullName>Return_Date__c</fullName>
    <description>It is used to store actual return date</description>
    <label>Return Date</label>
    <type>Date</type>
</CustomField>