force-app/main/default/objects/Borrow_Detail__c/fields/Total_Fine__c.field-meta.xml
<CustomField>
    <fullName>Total_Fine__c</fullName>
    <description>It is used to find the Fine Per Day</description>
    <formula>Overdue_Days__c * Fine_Per_Day__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Fine</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>