force-app/main/default/objects/Borrow_Detail__c/validationRules/BRW0001_Validate_Book_Availability.validationRule-meta.xml
<ValidationRule>
    <fullName>BRW0001_Validate_Book_Availability</fullName>
    <active>false</active>
    <description>It is used to check that, the book is available or not</description>
    <errorConditionFormula>AND(Book__r.Available_Copies__c  = 0 ||  ISBLANK(Book__r.Available_Copies__c ), ISNEW() )</errorConditionFormula>
    <errorDisplayField>Book__c</errorDisplayField>
    <errorMessage>Book is Out of Stock, kindly pick another book</errorMessage>
</ValidationRule>