force-app/main/default/objects/Borrow_Detail__c/validationRules/BRW0002_Validate_Dates.validationRule-meta.xml
<ValidationRule>
    <fullName>BRW0002_Validate_Dates</fullName>
    <active>true</active>
    <description>It is used to prevent user enter invalid date</description>
    <errorConditionFormula>( Return_Date__c &lt; Borrow_Date__c ) || ( Due_Date__c &lt; Borrow_Date__c )</errorConditionFormula>
    <errorMessage>Kindly enter a valid date : Borrow Date should be earlier than Return Date and Due Date</errorMessage>
</ValidationRule>