force-app/main/default/objects/Borrow_Detail__c/validationRules/BRW0003_Validate_Membership.validationRule-meta.xml
<ValidationRule>
    <fullName>BRW0003_Validate_Membership</fullName>
    <active>false</active>
    <description>It is used to validate the Membership, can borrow book or not through by Membership Date.</description>
    <errorConditionFormula>ISNEW() &amp;&amp; Member_Ship__r.Membership_End_Date__c &lt; TODAY()</errorConditionFormula>
    <errorDisplayField>Member_Ship__c</errorDisplayField>
    <errorMessage>This Membership Date is expired.</errorMessage>
</ValidationRule>