force-app/main/default/objects/Borrow_Detail__c/validationRules/BRW0004_Validate_Date_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>BRW0004_Validate_Date_Required</fullName>
    <active>true</active>
    <description>It is used to validate that, if you enter Return Date, Borrow Date is required</description>
    <errorConditionFormula>ISBLANK(Borrow_Date__c) &amp;&amp;  !ISBLANK( Return_Date__c ) || 
ISBLANK(Borrow_Date__c) &amp;&amp;  !ISBLANK(  Due_Date__c )</errorConditionFormula>
    <errorDisplayField>Borrow_Date__c</errorDisplayField>
    <errorMessage>Kindly enter Borrow Date, if you enter Return Date or Due Date</errorMessage>
</ValidationRule>