force-app/main/default/objects/Borrow_Detail__c/validationRules/BRW0005_Validate_Borrow_Limit.validationRule-meta.xml
<ValidationRule>
    <fullName>BRW0005_Validate_Borrow_Limit</fullName>
    <active>false</active>
    <description>It is used to limit the borrow books.</description>
    <errorConditionFormula>Member_Ship__r.No_of_Books_Borrowed__c  &gt;= Member_Ship__r.Borrow_Limit__c</errorConditionFormula>
    <errorDisplayField>Member_Ship__c</errorDisplayField>
    <errorMessage>This member reach his/her borrow limit</errorMessage>
</ValidationRule>