force-app/main/default/objects/Borrow_Detail__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Borrow_Date__c</columns>
    <columns>Member_Ship__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>